Visualizacion de contraseña, modificación en los componentes create cuenta, olvido password, restablecer password,login, ademas se añadio conceptos basicos para la implementacion de archivos

--- a/frontend/Proyecto/src/app/componentes/empresa/vista-empresa/vista-empresa.component.css
+++ b/frontend/Proyecto/src/app/componentes/empresa/vista-empresa/vista-empresa.component.css
@@ -26,3 +26,10 @@
     color:red;
     font-size: 12px;
 }
+.cargaArchivo{
+    color:rgb(9, 181, 141);
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.cargaArchivo label:first-child{
+    color: black;
+}
