--- a/frontend/Proyecto/src/app/componentes/pagina_comercial/restablecer-password/restablecer-password.component.css
+++ b/frontend/Proyecto/src/app/componentes/pagina_comercial/restablecer-password/restablecer-password.component.css
@@ -9,3 +9,12 @@
     opacity: .8;
 }
 
+.error {
+    color: #f82929;
+    font-size: 13px;
+    margin-top: 2px;
+  }
+  .icon-password{
+    z-index: 10;
+    margin-left: -30px;
+}
