--- a/frontend/Proyecto/src/app/componentes/pagina_comercial/restablecer-password/restablecer-password.component.html
+++ b/frontend/Proyecto/src/app/componentes/pagina_comercial/restablecer-password/restablecer-password.component.html
@@ -38,25 +38,41 @@
                                     <form #form2 [formGroup]="restablecerPassword" autocomplete="off" novalidate
                                     #formRef2="ngForm" (ngSubmit)="enviar(password.value)">
                                         <div class="col-md-8 mb-3">
+                                            
                                             <div class="form-floating">
-                                                <input #password class="form-control" id="inputPassword" name="password"
-                                                    type="password" placeholder="Ingrese su contraseña"
-                                                    formControlName="password" maxlength="24">
-                                                <label for="inputPassword">Contraseña</label>
+                                                <div class = "d-flex align-items-center">
+                                                    <div class="form-floating w-100">
+                                                        <input #password matInput [type]="hide ? 'password' : 'text'" class="form-control" id="inputPassword" name="password"
+                                                        formControlName="password" placeholder="Ingrese una contraseña" maxlength = "24" >
+                                                        <label for = "inputPassword">Contraseña</label>
+                                                    </div>
+                                                    <a class ="icon-password" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                                                        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                                                    </a>
+                                                </div>
                                                 <span class="lead error"
-                                                    *ngIf="(formRef.submitted && restablecerPassword.get('password')?.hasError('required')) || restablecerPassword.get('password')?.hasError('pattern') ">contraseñas
-                                                    no válida</span>
+                                                    *ngIf="(formRef.submitted && restablecerPassword.get('password')?.hasError('required')) || restablecerPassword.get('password')?.hasError('pattern') || restablecerPassword.get('password')?.hasError('minlength')">Ingrese contraseña que contenga:<br>
+                                                    ◆ Al menos 1 minuscula<br>
+                                                    ◆ Al menos 1 mayuscula<br>
+                                                    ◆ Al menos 1 numero<br>
+                                                    ◆ Al menos 1 caracter especial<br>
+                                                    ◆ Mínimo 8 caracteres</span>
                                             </div>
                                         </div>
                                         
                                         <div class="col-md-8 mb-3">
                                             <div class="form-floating">
-                                                <input class="form-control" id="validatePassword"
-                                                    name="passwordvalidate" type="password"
-                                                    placeholder="Ingrese su contraseña nuevamente"
-                                                    formControlName="confpassword" maxlength="24">
-                                                <label for="inputvalidatePassword">Valide su contraseña</label>
-                                                <span class="lead error" *ngIf="(formRef.submitted && restablecerPassword.get('password')?.hasError('required')) || restablecerPassword.get('password')?.hasError('pattern') || validacionPassword()">La contraseñas
+                                                <div class = "d-flex align-items-center">
+                                                    <div class="form-floating w-100">
+                                                        <input matInput [type]="hideConf ? 'password' : 'text'" class="form-control" id="validatePassword" name="passwordvalidate"
+                                                        formControlName="confpassword" placeholder="Ingrese su contraseña nuevamente" maxlength="24">
+                                                        <label for="inputvalidatePassword">Valide su contraseña</label>
+                                                    </div>
+                                                    <a class ="icon-password" mat-icon-button matSuffix (click)="hideConf = !hideConf" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                                                        <mat-icon>{{hideConf ? 'visibility_off' : 'visibility'}}</mat-icon>
+                                                    </a>
+                                                </div>
+                                                <span class="lead error" *ngIf="validacionPassword()">La contraseñas
                                                     no coinciden</span>
                                             </div>
                                         </div>
