--- a/frontend/Proyecto/src/app/componentes/cliente/change-password/change-password.component.html
+++ b/frontend/Proyecto/src/app/componentes/cliente/change-password/change-password.component.html
@@ -9,18 +9,33 @@
                 <div id="campos">
                     <div class="col-md-5 mt-4 mb-4 w-50">
                         <div class="form-floating">
-                            <input class="form-control" id="inputActualPassword" name="actualPassword" type="password"
-                                placeholder="Ingrese su contraseña" formControlName='actual_password'>
-                            <label for="inputActualPassword">Contraseña Actual</label>
+                            <div class = "d-flex align-items-center">
+                                <div class="form-floating w-100">
+                                    <input matInput [type]="hideAct ? 'password' : 'text'" class="form-control" id="inputActualPassword" name="actualPassword"
+                                    formControlName="actual_password" placeholder="Ingrese una contraseña">
+                                    <label for = "inputActualPassword">Contraseña Actual</label>
+                                </div>
+                                <a class ="icon-password" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                                    <mat-icon>{{hideAct ? 'visibility_off' : 'visibility'}}</mat-icon>
+                                </a>
+                            </div>
                             <span class="lead error" *ngIf="(formRef.submitted  && changePassword.get('actual_password')?.hasError('required')) || changePassword.get('actual_password')?.hasError('minlength')">
-                                Ingrese una contraseña que valida</span>
+                                La contraseña no coincide</span>
                         </div>
                     </div>
                     <div class="col-md-5 mb-4 w-50">
+                        
                         <div class="form-floating">
-                            <input class="form-control" id="inputNewPassword" name="newPassword" type="password" maxlength="24"
-                            placeholder="Ingrese su nueva contraseña" formControlName='password'>
-                            <label for="inputNewPassword">Nueva Contraseña</label>
+                            <div class = "d-flex align-items-center">
+                                <div class="form-floating w-100">
+                                    <input #password matInput [type]="hide ? 'password' : 'text'" class="form-control" id="inputNewPassword" name="newpassword"
+                                    formControlName="password" placeholder="Ingrese una contraseña" maxlength="24">
+                                    <label for = "inputNewPassword">Contraseña Nueva</label>
+                                </div>
+                                <a class ="icon-password" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                                    <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                                </a>
+                            </div>
                             <span class="lead error" *ngIf="(formRef.submitted  && changePassword.get('password')?.hasError('required')) || changePassword.get('password')?.hasError('pattern')">
                                 Ingrese una contraseña que contenga:<br>
                                 ◆ Al menos 1 Minuscula<br>
@@ -32,9 +47,16 @@
                     </div>
                     <div class="col-md-5 mb-4 w-50">
                         <div class="form-floating">
-                            <input class="form-control" id="inputConfPassword" name="confPassword" type="password" maxlength="24"
-                            placeholder="Ingresa nuevamente su nueva contraseña" formControlName='confpassword'>
-                            <label for="inputEmail">Confirmar Contraseña</label>
+                            <div class = "d-flex align-items-center">
+                                <div class="form-floating w-100">
+                                    <input matInput [type]="hideConf ? 'password' : 'text'" class="form-control" id="inputConfPassword" name="confPassword"
+                                    formControlName="confpassword" placeholder="Ingrese su contraseña nuevamente" maxlength="24">
+                                    <label for="inputConPassword">Confirmar Contraseña</label>
+                                </div>
+                                <a class ="icon-password" mat-icon-button matSuffix (click)="hideConf = !hideConf" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                                    <mat-icon>{{hideConf ? 'visibility_off' : 'visibility'}}</mat-icon>
+                                </a>
+                            </div>
                             <!-- <span class="lead error"*ngIf="validacionPassword()">La contraseñas no coinciden</span> -->
                             <span class="lead error" *ngIf="(formRef.submitted  && changePassword.get('confpassword')?.hasError('required')) || changePassword.get('confpassword')?.hasError('pattern') || validacionPassword()">
                                 Las contraseñas no coinciden</span>
