--- a/frontend/Proyecto/src/app/componentes/pagina_comercial/login/login.component.css
+++ b/frontend/Proyecto/src/app/componentes/pagina_comercial/login/login.component.css
@@ -19,3 +19,7 @@ input:invalid:focus {
     background: no-repeat rgb(249,249,249);
     opacity: .8;
 }
+.icon-password{
+  z-index: 10;
+  margin-left: -30px;
+}
