--- a/frontend/Proyecto/src/app/componentes/pagina_comercial/login/login.component.html
+++ b/frontend/Proyecto/src/app/componentes/pagina_comercial/login/login.component.html
@@ -15,16 +15,22 @@
                                         {{msg_content}}
                                     </div>
                                     <div class="form-floating mt-5 mb-3">
-                                        <input formControlName="email" (input)="validacion('email')"
+                                        <input  formControlName="email" (input)="validacion('email')"
                                             class="form-control" id="inputUser" type="text" placeholder="email"
                                             name="username" minlength='4' maxlength="150">
                                         <label for="inputEmail">Email</label>
                                     </div>
                                     <div class="form-floating mt-5 mb-3">
-                                        <input formControlName="password" (input)="validacion('password')"
-                                            class="form-control" id="inputPassword" type="password"
-                                            placeholder="password" name="password" minlength='8' maxlength="24">
-                                        <label for="inputPassword">Password</label>
+                                        <div class = "d-flex align-items-center">
+                                            <div class="form-floating w-100">
+                                                <input #password matInput [type]="hide ? 'password' : 'text'" class="form-control" id="inputPassword" name="password"
+                                                formControlName="password" placeholder="Ingrese una contraseña" minlength='8' (input)="validacion('password')" maxlength="24">
+                                                <label for = "inputPassword">Contraseña</label>
+                                            </div>
+                                            <a class ="icon-password" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                                                <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                                            </a>
+                                        </div>
                                     </div>
                                     <div class="form-check mt-5 mb-3">
                                         <input class="form-check-input" id="inputRememberPassword" type="checkbox"
