--- a/frontend/Proyecto/src/app/componentes/cliente/change-password/change-password.component.css
+++ b/frontend/Proyecto/src/app/componentes/cliente/change-password/change-password.component.css
@@ -44,3 +44,14 @@
     color:red;
     font-size: 12px;
 }
+
+#loader {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: no-repeat rgb(249,249,249);
+    opacity: .8;
+}
