--- a/frontend/Proyecto/src/app/componentes/cliente/change-password/change-password.component.html
+++ b/frontend/Proyecto/src/app/componentes/cliente/change-password/change-password.component.html
@@ -45,6 +45,10 @@
                     </div>
                 </div>
             </div>
+            <div *ngIf="loanding" id="loader" class="w-100">
+                <mat-progress-spinner class="top-50 start-50 translate-middle" id="carga" [color]="color" [mode]="mode">
+                </mat-progress-spinner>
+            </div>
         </form>
     </div>
 </div>
