--- a/frontend/Proyecto/src/app/componentes/cliente/perfil/perfil.component.css
+++ b/frontend/Proyecto/src/app/componentes/cliente/perfil/perfil.component.css
@@ -54,3 +54,14 @@ label {
 input {
     margin: .4rem;
 }
+
+#loader {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: no-repeat rgb(249,249,249);
+    opacity: .8;
+}
