--- a/frontend/Proyecto/src/app/componentes/empresa/partials/nav-empresa/nav-empresa.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/partials/nav-empresa/nav-empresa.component.html
@@ -29,12 +29,13 @@
                     </a>
                 </li>
 
-                <li class="nav-item">
+<!--                <li class="nav-item">
                     <a class="nav-link active" aria-current="page" routerLink="documentos-company">
                         <span data-feather="documentos-company"></span>
                         Documentos
                     </a>
                 </li>
+                -->
             </ul>
         </div>
     </nav>
