--- a/frontend/Proyecto/src/app/componentes/empresa/pop-up/pop-up.component.css
+++ b/frontend/Proyecto/src/app/componentes/empresa/pop-up/pop-up.component.css
@@ -60,4 +60,15 @@ select{
     color: #f82929;
     font-size: 13px;
     margin-top: 2px;
-  } 
+  }
+
+  #loader {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: no-repeat rgb(249,249,249);
+    opacity: .8;
+}
