--- a/frontend/Proyecto/src/app/componentes/empresa/pop-up/pop-up.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/pop-up/pop-up.component.html
@@ -213,9 +213,10 @@
                             class="btn btn-primary btn-block">
                     </div>
                 </div>
-
-
-
+                <div *ngIf="loanding" id="loader" class="w-100">
+                    <mat-progress-spinner class="top-50 start-50 translate-middle" id="carga" [color]="color" [mode]="mode">
+                    </mat-progress-spinner>
+                </div>
             </form>
         </div>
     </div>
