Correciones para el despliegue.

--- a/frontend/Proyecto/src/app/componentes/pagina_comercial/home/home.component.html
+++ b/frontend/Proyecto/src/app/componentes/pagina_comercial/home/home.component.html
@@ -1,2 +1,2 @@
 <nav_bar></nav_bar>
-<p>Hola mundo, Soy Aaron!</p>
+<img src="https://www.docuclass-la.com/wp-content/uploads/2020/10/emision-facturacion-electronica.png" alt="">
