--- a/frontend/Proyecto/src/app/componentes/cliente/change-password/change-password.component.html
+++ b/frontend/Proyecto/src/app/componentes/cliente/change-password/change-password.component.html
@@ -15,7 +15,7 @@
                                     formControlName="actual_password" placeholder="Ingrese una contraseña">
                                     <label for = "inputActualPassword">Contraseña Actual</label>
                                 </div>
-                                <a class ="icon-password" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                                <a class ="icon-password" mat-icon-button matSuffix (click)="hideAct = !hideAct" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                                     <mat-icon>{{hideAct ? 'visibility_off' : 'visibility'}}</mat-icon>
                                 </a>
                             </div>
