--- a/frontend/Proyecto/src/app/componentes/empresa/partials/nav-empresa/nav-empresa.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/partials/nav-empresa/nav-empresa.component.html
@@ -2,7 +2,6 @@
     <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
         <div class="position-sticky">
             <ul class="nav flex-column">
-                
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" routerLink="perfil">
                         <span data-feather="profile-user"></span>
@@ -34,15 +33,12 @@
                         Grupos
                     </a>
                 </li>
-<!--                <li class="nav-item">
+                <li class="nav-item">
                     <a class="nav-link active" aria-current="page" routerLink="documentos-company">
                         <span data-feather="documentos-company"></span>
                         Documentos
                     </a>
-
                 </li>
-                
-
             </ul>
         </div>
     </nav>
