Cambios en seccion de alertas y carga de Documentos de la empresa

--- a/frontend/Proyecto/src/app/componentes/auxiliares/alertas/alertas.component.css
+++ b/frontend/Proyecto/src/app/componentes/auxiliares/alertas/alertas.component.css
@@ -65,6 +65,11 @@
 .existe{
   background-color: rgb(255, 240, 182);
 }
+
+.repetida{
+  background-color: rgb(255, 240, 182);
+}
+
 .creado{
   background-color: rgb(196, 255, 173);
 }
